Periodic push of notes